fix z-index on progress bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -496,6 +496,7 @@ body, .non-selectable {
     margin-top: 4px;
     border-radius: 2px;
     overflow: hidden;
+    z-index: 2; 
 }
 
 .activityProgressBar {
@@ -504,6 +505,7 @@ body, .non-selectable {
     width: 0;
     border-radius: 2px;
     transition: width 0.5s ease;
+    z-index: 2; 
 }
 
 /* =================== PROJECTS ==================== */
